# Graphics-Engine

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  DEVLOG.md  README.md  firstlight_install.bat  firstlight_install.ps1  firstlight_start.bat  firstlight_start.ps1  firstlight_update.bat  firstlight_update.ps1
crates/engine/: Cargo.toml
crates/engine/examples/: shadow_probe.rs
crates/engine/src/: camera.rs  debug.rs  lib.rs  lighting.rs  menu.rs  physics.rs  player.rs
games/first_light/: Cargo.toml
games/first_light/src/: main.rs
games/first_light/src/plugins/: audio.rs  castle.rs  catapult.rs  grass.rs  masonry.rs  mod.rs  props.rs  scoring.rs  soldiers.rs  terrain.rs  throw.rs  trebuchet.rs  vegetation.rs  world.rs
games/first_light/src/plugins/shaders/: grass.wgsl  grass_prepass.wgsl
