[workspace]
resolver = "3"
members = ["crates/engine", "games/first_light"]
default-members = ["games/first_light"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bevy = { version = "0.18", features = ["wav"] }
avian3d = "0.6"
engine = { path = "crates/engine" }

# Fast iteration: light optimization for our code, full for dependencies.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
