[package]
name = "first_light"
version.workspace = true
edition.workspace = true

[features]
# Dev loop: dynamic linking for fast rebuilds. The FPS counter is built in
# (F3 / pause menu), so no separate dev_tools feature is needed.
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { workspace = true }
avian3d = { workspace = true }
engine = { workspace = true }
